--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "cv-builder",
   "version": "0.1.0",
+  "homepage": "https://fedelopez17.github.io/cv-builder/",
   "private": true,
   "dependencies": {
     "html2pdf.js": "^0.10.1",
@@ -10,6 +11,8 @@
     "react-scripts": "5.0.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -34,6 +37,7 @@
     ]
   },
   "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "gh-pages": "^6.0.0"
   }
 }
