--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "cv-builder",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://fedelopez17.github.io/cv-builder/",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -27,6 +28,7 @@
     "eslint": "^8.55.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "gh-pages": "^6.1.1",
     "postcss": "^8.4.32",
     "tailwindcss": "^3.4.0",
     "typescript": "^5.2.2",
